# ambrogio

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: SPECIFICATIONS.md
plans/: 001-continuous-pomodoro-with-breaks.md
src/: chat.rs  cli.rs  config.rs  hooks.rs  llm.rs  main.rs  pomodoro.rs  todo.rs
